# stellar

./: .gitignore  plan.md
.github/workflows/: ci.yml  deploy.yml  release.yml
stellarops/: .credo.exs  .dockerignore  .dockerignore.elixir  .env.example  .gitignore  .sobelow-conf  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  mix.exs  test_command_executor.exs
stellarops/.github/: dependabot.yml
stellarops/.github/workflows/: cd-prod.yml  ci.yml  pr-preview.yml  release.yml  security.yml
stellarops/apps/stellar_core/: mix.exs
stellarops/apps/stellar_data/: mix.exs
stellarops/apps/stellar_web/: mix.exs
stellarops/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
stellarops/frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
stellarops/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
stellarops/infrastructure/docker/: Dockerfile.elixir.dev  Dockerfile.elixir.prod  Dockerfile.frontend.dev  Dockerfile.frontend.prod  Dockerfile.rust.dev  Dockerfile.rust.prod  nginx.conf  nginx.prod.conf
stellarops/infrastructure/prometheus/: alert_rules.yml  prometheus.yml
stellarops/k8s/: README.md
stellarops/k8s/base/: ingress.yaml  kustomization.yaml  pdb.yaml  (+2 more)
stellarops/load-tests/: conjunction-detection.js  main.js  websocket.js
stellarops/services/orbital_service/: .gitignore  Cargo.toml  build.rs
stellarops/services/orbital_service/proto/: orbital.proto
stellarops/services/orbital_service/src/: main.rs  metrics.rs  propagator.rs  service.rs  tests.rs
(+280 files in other folders)
