[package]
name = "orbital_service"
version = "0.1.0"
edition = "2021"
authors = ["StellarOps Team"]
description = "Orbital propagation gRPC service using SGP4"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SGP4 orbital propagation
sgp4 = "1.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# HTTP server for metrics endpoint
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "orbital_service"
path = "src/main.rs"
